# Digital-Image-Processing

./: .gitattributes  .gitignore  README.md  pyproject.toml
06_assignments/: coin_detection.ipynb
08_projects/: euro_detection.ipynb
08_projects/MatlabConv2025/: Convolution_Basics.mlx
08_projects/MatlabConv2025/__MACOSX/: ._Example1.m
08_projects/MatlabProjGeo2025/__MACOSX/MatlabFns/Projective/: ._homoTrans.m
08_projects/euro_detection/: euro_detection_old.ipynb
08_projects/old/: euro_detection_old.mlx
08_projects/old/MatlabConv2025/: Example1.m
08_projects/old/MatlabProjGeo2025/: projective_geometry.m
