[project]
name = "simulation-optimization"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jupyterlab>=4.5.0",
    "matplotlib>=3.10.7",
    "numpy>=2.3.4",
    "opencv-python-headless>=4.11.0.86",
    "scikit-image>=0.25.2",
    "scipy>=1.16.2",
]
